# stake_rs

./: Cargo.toml  LICENSE  README.md
res/: obs_farm.wasm  obs_token.wasm  reward_token.wasm  stake.wasm
src/: ft_obs.rs  ft_reward.rs  lib.rs  lib.sol
